Showing used dataframes in the notebook

--- a/Airbnb analysis.ipynb
+++ b/Airbnb analysis.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Appending superhosts in a single dataset\n",
+    "# Appending superhosts from both cities in a single dataframe\n",
     "complete = seattle_superhosts.append(boston_superhosts)"
    ]
   },
@@ -1231,6 +1231,176 @@
    "source": [
     "grouped_by_room_type = complete.groupby('room_type').count(\n",
     ").reset_index().sort_values(by=\"id\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>id</th>\n",
+       "      <th>listing_url</th>\n",
+       "      <th>scrape_id</th>\n",
+       "      <th>last_scraped</th>\n",
+       "      <th>name</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>space</th>\n",
+       "      <th>description</th>\n",
+       "      <th>experiences_offered</th>\n",
+       "      <th>...</th>\n",
+       "      <th>review_scores_value</th>\n",
+       "      <th>requires_license</th>\n",
+       "      <th>license</th>\n",
+       "      <th>jurisdiction_names</th>\n",
+       "      <th>instant_bookable</th>\n",
+       "      <th>cancellation_policy</th>\n",
+       "      <th>require_guest_profile_picture</th>\n",
+       "      <th>require_guest_phone_verification</th>\n",
+       "      <th>calculated_host_listings_count</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>476</td>\n",
+       "      <td>459</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>...</td>\n",
+       "      <td>480</td>\n",
+       "      <td>492</td>\n",
+       "      <td>0</td>\n",
+       "      <td>353</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>492</td>\n",
+       "      <td>480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Private room</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>281</td>\n",
+       "      <td>262</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>...</td>\n",
+       "      <td>284</td>\n",
+       "      <td>288</td>\n",
+       "      <td>0</td>\n",
+       "      <td>175</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>288</td>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Shared room</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>11</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 92 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         room_type   id  listing_url  scrape_id  last_scraped  name  summary  \\\n",
+       "0  Entire home/apt  492          492        492           492   492      476   \n",
+       "1     Private room  288          288        288           288   288      281   \n",
+       "2      Shared room   14           14         14            14    14       14   \n",
+       "\n",
+       "   space  description  experiences_offered  ...  review_scores_value  \\\n",
+       "0    459          492                  492  ...                  480   \n",
+       "1    262          288                  288  ...                  284   \n",
+       "2     11           14                   14  ...                   12   \n",
+       "\n",
+       "   requires_license  license  jurisdiction_names  instant_bookable  \\\n",
+       "0               492        0                 353               492   \n",
+       "1               288        0                 175               288   \n",
+       "2                14        0                   9                14   \n",
+       "\n",
+       "   cancellation_policy  require_guest_profile_picture  \\\n",
+       "0                  492                            492   \n",
+       "1                  288                            288   \n",
+       "2                   14                             14   \n",
+       "\n",
+       "   require_guest_phone_verification  calculated_host_listings_count  \\\n",
+       "0                               492                             492   \n",
+       "1                               288                             288   \n",
+       "2                                14                              14   \n",
+       "\n",
+       "   reviews_per_month  \n",
+       "0                480  \n",
+       "1                284  \n",
+       "2                 12  \n",
+       "\n",
+       "[3 rows x 92 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_by_room_type"
    ]
   },
   {
